dxmt_test_include_dirs = include_directories('include')
d3d10_test_dep = cpp.find_library('d3d10')
d3d11_test_dep = cpp.find_library('d3d11')
d3d12_test_dep = cpp.find_library('d3d12')
d3dcompiler_library = 'd3dcompiler_47'
if get_option('windows_oracle_only')
  d3dcompiler_library = 'd3dcompiler'
endif
d3dcompiler_test_dep = cpp.find_library(d3dcompiler_library)
dxgi_test_dep = cpp.find_library('dxgi')

windows_oracle_cpp_args = []
d3d11_windows_oracle_dependencies = []
if get_option('windows_oracle_only')
  windows_oracle_cpp_args = cpp.get_supported_arguments([
    '/bigobj',
    '/utf-8',
    '/DNOMINMAX',
    '/DWIN32_LEAN_AND_MEAN',
    '/D_WIN32_WINNT=0x0A00',
  ])
  d3d11_windows_oracle_dependencies += cpp.find_library('dxguid')
endif

dxmt_test_main_lib = static_library(
  'dxmt-wine-test-main',
  files(
    'support/main.cpp',
    'support/scheduler.cpp',
    'support/scheduler_plan.cpp',
  ),
  dependencies: [gtest_dep],
  include_directories: [dxmt_test_include_dirs],
  cpp_args: windows_oracle_cpp_args,
  install: false,
)

dxmt_test_dep = declare_dependency(
  link_with: [dxmt_test_main_lib],
  dependencies: [gtest_dep],
  include_directories: [dxmt_test_include_dirs],
)

# Defined before the API subdirectories because the d3d9 suite's build-time
# transform runs through it.
python3_native = find_program('python3', native: true)

subdir('d3d9')

# The d3d9 shader-oracle baseline is read at run time and must sit beside the
# suite executables, here and in the packaged oracle drop alike.
configure_file(
  input: 'd3d9/shader_oracle_baseline.txt',
  output: 'shader_oracle_baseline.txt',
  copy: true,
)

configure_file(
  input: 'd3d9/wine_conformance_baseline.txt',
  output: 'wine_conformance_baseline.txt',
  copy: true,
)

configure_file(
  input: 'd3d9/wine_known_skips.txt',
  output: 'wine_known_skips.txt',
  copy: true,
)
subdir('d3d10')
subdir('d3d11')
subdir('d3d12')

if not get_option('windows_oracle_only')
dxmt_wine_framework_tests = executable(
  'dxmt-wine-framework-tests',
  files(
    'wine/framework_spec.cpp',
    'wine/scheduler_spec.cpp',
    'wine/placeholder_spec.cpp',
    'wine/layout_spec.cpp',
  ),
  dependencies: [dxmt_test_dep],
  install: false,
)
endif

dxmt_wine_d3d9_tests = executable(
  'dxmt-wine-d3d9-tests',
  d3d9_unit_sources,
  dependencies: [dxmt_test_dep] + d3d9_unit_dependencies,
  cpp_args: windows_oracle_cpp_args + d3d9_unit_cpp_args,
  install: false,
)

dxmt_wine_d3d10_tests = executable(
  'dxmt-wine-d3d10-tests',
  d3d10_unit_sources,
  dependencies: [dxmt_test_dep] + d3d10_unit_dependencies,
  cpp_args: windows_oracle_cpp_args,
  install: false,
)

dxmt_wine_d3d11_tests = executable(
  'dxmt-wine-d3d11-tests',
  d3d11_unit_sources,
  dependencies: [dxmt_test_dep] + d3d11_unit_dependencies + d3d11_windows_oracle_dependencies,
  cpp_args: windows_oracle_cpp_args,
  install: false,
)

dxmt_wine_d3d12_tests = executable(
  'dxmt-wine-d3d12-tests',
  d3d12_unit_sources,
  dependencies: [dxmt_test_dep] + d3d12_unit_dependencies,
  cpp_args: windows_oracle_cpp_args,
  install: false,
)

configure_file(
  input: 'd3d12/run-windows-oracle.bat',
  output: 'run-windows-oracle.bat',
  copy: true,
)

if get_option('windows_oracle_only')
  subdir_done()
endif

commit_message_policy_test = find_program('../scripts/check-commit-message.sh')
test(
  'commit-message-policy',
  commit_message_policy_test,
  args: ['--self-test'],
  suite: ['unit', 'repository'],
  timeout: 30,
)


test(
  'ci-routing-policy',
  python3_native,
  args: [files('ci/ci_routing_policy_test.py')],
  suite: ['unit', 'repository'],
  timeout: 30,
)

test(
  'public-api-boundary-policy',
  python3_native,
  args: [files('ci/test_public_api_boundary.py')],
  suite: ['unit', 'repository'],
  timeout: 30,
)

test(
  'd3d12-coverage-validator-tests',
  python3_native,
  args: [files('coverage/test_check_d3d12_coverage.py')],
  suite: ['unit', 'coverage'],
  timeout: 30,
)

dxmt_wine_test_scheduler = executable(
  'dxmt-wine-test-scheduler',
  files('support/wine_suite_scheduler.cpp'),
  include_directories: [include_directories('support')],
  install: false,
)

test(
  'dxmt-wine-unit-tests',
  wine_test_launcher,
  args: ['wine-exec', '--', dxmt_wine_test_scheduler],
  suite: ['unit', 'wine'],
  # Large parameterized D3D12 matrices need well over the default 120s budget.
  timeout: 1800,
  env: wine_test_env,
  is_parallel: false,
  workdir: meson.project_source_root(),
)

# d3d9 host-native, wine-free tests (the 'host' suite CI gate).
# The shader oracle runner is a PE the d3d9 suite spawns, so it must be built
# with that suite. It only exists in a cross build with widl available.
shader_oracle_runner = []
subdir('dx9')
subdir('d3d9-corpus')

alias_target(
  'dxmt-wine-tests',
  dxmt_wine_test_scheduler,
  dxmt_wine_framework_tests,
  dxmt_wine_d3d9_tests,
  shader_oracle_runner,
  wine_conformance_tests,
  dxmt_wine_d3d10_tests,
  dxmt_wine_d3d11_tests,
  dxmt_wine_d3d12_tests,
  d3d12_differential_oracle,
)

alias_target(
  'dxmt-wine-tests-framework',
  dxmt_wine_test_scheduler,
  dxmt_wine_framework_tests,
)
alias_target(
  'dxmt-wine-tests-d3d9',
  dxmt_wine_test_scheduler,
  dxmt_wine_d3d9_tests,
  shader_oracle_runner,
  wine_conformance_tests,
)
alias_target(
  'dxmt-wine-tests-d3d10',
  dxmt_wine_test_scheduler,
  dxmt_wine_d3d10_tests,
)
alias_target(
  'dxmt-wine-tests-d3d11',
  dxmt_wine_test_scheduler,
  dxmt_wine_d3d11_tests,
)
alias_target(
  'dxmt-wine-tests-d3d12',
  dxmt_wine_test_scheduler,
  dxmt_wine_d3d12_tests,
  d3d12_differential_oracle,
)

