d3d12_src = [
  'd3d12.cpp',
  'd3d12_device.cpp',
  'd3d12_command_queue.cpp',
  'd3d12_command_allocator.cpp',
  'd3d12_command_list.cpp',
  'd3d12_resource.cpp',
  'd3d12_heap.cpp',
  'd3d12_descriptor_heap.cpp',
  'd3d12_root_signature.cpp',
  'd3d12_pipeline.cpp',
  'd3d12_fence.cpp',
  'd3d12_query.cpp',
  'd3d12_frame_interop.cpp',
]

# Build integration is intentionally deferred until interfaces have real definitions.
