d3d11_unit_sources = files(
  'device_spec.cpp',
  'capability_spec.cpp',
  'pipeline_spec.cpp',
  'constant_buffer_range_binding_matrix_spec.cpp',
  'input_assembler_ops_spec.cpp',
  'index_buffer_binding_matrix_spec.cpp',
  'resource_spec.cpp',
  'resource_min_lod_matrix_spec.cpp',
  'draw_matrix_spec.cpp',
  'indirect_draw_matrix_spec.cpp',
  'indirect_indexed_draw_matrix_spec.cpp',
  'transfer_matrix_spec.cpp',
  'update_subresource1_matrix_spec.cpp',
  'copy_subresource_region1_matrix_spec.cpp',
  'batched_buffer_copy_spec.cpp',
  'query_matrix_spec.cpp',
  'query_contract_spec.cpp',
  'depth_stencil_matrix_spec.cpp',
  'view_matrix_spec.cpp',
  'object_com_matrix_spec.cpp',
  'output_merger_binding_matrix_spec.cpp',
  'clear_blend_matrix_spec.cpp',
  'clear_view_rect_matrix_spec.cpp',
  'clear_uav_float_matrix_spec.cpp',
  'viewport_state_matrix_spec.cpp',
  'shader_constant_buffer_binding_matrix_spec.cpp',
  'shader_object_binding_matrix_spec.cpp',
  'shader_resource_binding_matrix_spec.cpp',
  'shader_sampler_binding_matrix_spec.cpp',
  'viewport_sampler_matrix_spec.cpp',
  'scissor_rect_state_matrix_spec.cpp',
  'viewport_scissor_ops_spec.cpp',
  'rasterization_ops_spec.cpp',
  'interpolation_ops_spec.cpp',
  'mrt_ops_spec.cpp',
  'compute_uav_binding_matrix_spec.cpp',
  'dispatch_matrix_spec.cpp',
  'indirect_dispatch_matrix_spec.cpp',
  'msaa_execution_ops_spec.cpp',
  'msaa_resolve_matrix_spec.cpp',
  'deferred_context_matrix_spec.cpp',
  'format_mip_matrix_spec.cpp',
  'map_copy_matrix_spec.cpp',
  'shader_arithmetic_matrix_spec.cpp',
  'shader_conversion_matrix_spec.cpp',
  'shader_derivative_ops_spec.cpp',
  'geometry_shader_ops_spec.cpp',
  'stream_output_binding_matrix_spec.cpp',
  'stream_output_matrix_spec.cpp',
  'tessellation_shader_ops_spec.cpp',
  'raw_buffer_shader_matrix_spec.cpp',
  'raw_uav_atomic_spec.cpp',
  'shader_atomic_matrix_spec.cpp',
  'texture_dimension_matrix_spec.cpp',
  'texture_sampling_ops_spec.cpp',
  'uav_counter_shader_spec.cpp',
)
d3d11_unit_dependencies = [d3d11_test_dep, dxgi_test_dep, d3dcompiler_test_dep]
